# spma-experiments

./: CHANGELOG.md  LICENSE  README.md
attn-spma-bugged/: README.md  v8_results.csv
attn-spma-bugged/src/: main.rs
attn-spma-minilm/: Cargo.toml  README.md  attention_comparison.csv
attn-spma-minilm/src/: main.rs
attn-spma-random/: README.md
hdfs-validation/: METHOD.md  README.md  corpus_report.sh  corpus_sweep.sh  corpus_train.sh  eval.py  level_sweep_1k.sh  level_sweep_50k.sh  parse.py  split.py  threshold.sh  threshold_50k.sh  threshold_full.sh  train_full.sh
hdfs-validation/archive/: grammar_summary.py
hdfs-validation/model/: hdfs_1000.json
v10/: README.md
v8/: Cargo.toml  README.md
v9/: Cargo.toml  compare_attention_results.csv
v9/src/: main.rs
